Menu: fixes menu alignment on buttons and similar targets.

--- a/source/editor/plugins/colibri/styles/controls.css
+++ b/source/editor/plugins/colibri/styles/controls.css
@@ -386,7 +386,6 @@ div.TabPaneTitleBar::-webkit-scrollbar {
 }
 
 .IconButton:hover {
-    background-color: rgba(255, 255, 255, 0.2);
     border-color: rgba(0, 0, 0, 0.2);
 }
 
